# innstereo

./: .gitignore  .landscape.yaml  .travis.yml  EXTRAS  MANIFEST.in  README.md  build_translations.py  installer.cfg  installer32.cfg  known_issues.rst  make_win.py  meson.build  org.gnome.innstereo.json  python3-numpy.json  python3-scipy.json  requirements.txt  setup.py  zanata.xml
data/: innstereo.appdata.xml  meson.build  org.gnome.innstereo.appdata.xml.in  org.gnome.innstereo.desktop.in  org.gnome.innstereo.gschema.xml  org.gtk.innstereo.gschema.xml
docs/: changelog.rst  conf.py  dataio.rst  datasets.rst  formatting.rst  index.rst  interface.rst  screenshots.rst  stereonet.rst  views.rst
docs/de/: Makefile  calculations.rst  changelog.rst  conf.py  dataio.rst  datasets.rst  formatting.rst  index.rst  interface.rst  screenshots.rst  stereonet.rst  views.rst
docs/en/: calculations.rst  changelog.rst  conf.py  dataio.rst  datasets.rst  formatting.rst  index.rst  interface.rst  make.bat  screenshots.rst  stereonet.rst  views.rst
docs/es/: Makefile  calculations.rst  changelog.rst  dataio.rst  datasets.rst  formatting.rst  index.rst  interface.rst  screenshots.rst  stereonet.rst  views.rst
docs_int/de/: conf.py
ibk-st/: dataview_classes.py  dialog_windows.py  dialog_windows.py~  file_parser.py  gui_layout.glade  ibk-st.py  ibk-st.py~  layer_types.py  layer_view.py  plot_control.py  plot_control.py~
ibk_st/: __init__.py  dataview_classes.py  dialog_windows.py  file_parser.py  gui_layout.glade  layer_types.py  layer_view.py  main_ui.py  plot_control.py  polar_axes.py
innstereo/: __init__.py  __main__.py  dataview_classes.py  dialog_windows.py  file_parser.py  gui_layout.glade  i18n.py  innstereo.gresource.xml  innstereo.in  layer_properties.py  layer_types.py  layer_view.py  main_ui.py  meson.build  plot_control.py  polar_axes.py  rotation_dialog.py  settings.py
innstereo/ui/: popovermenu_calc.xml  popovermenu_project.xml  popovermenu_view.xml
po/: de.po  el.po  es.po  fr.po  he.po  hu.po  innstereo.pot  it.po  meson.build  mn.po  nl.po  pt.po  sk.po  sr.po  sv.po  tr.po  uz@cyrillic.po
tests/: HOWTO.txt  __main__.py  json_strings.py  setup_json_strings.py  test_formatting.py  test_gui.py
